src/test/deca/context/invalid/our_tests/jb-OpIneq-simple1.deca
// Description:
//    OpIneq Contextual error
//
// Resultats:
//    Ligne 11: Operation avec OpGauche boolean et OpDroit int ou float
// 
// Historique:
//    cree le 18/01/2017

{
true > 1;
}
